--- a/backend/www/.env.dusk.testing.example
+++ b/backend/www/.env.dusk.testing.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=testing
-APP_KEY=
+APP_KEY=base64:FaxxqXlfmHicQ0eDxNJu7A6kor17FzP7t3D0TfgHHZo=
 APP_DEBUG=true
 APP_URL=http://nginx
 
