--- a/backend/www/.env.example
+++ b/backend/www/.env.example
@@ -50,3 +50,10 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 CORS_ORIGINS=http://localhost:3000
+
+RABBITMQ_ENV=production
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
+RABBITMQ_VHOST=/
