--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ./.docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     networks:
       - app-network
+      - rabbitmq_codeflix
     depends_on:
       - db
       - redis
@@ -69,3 +70,5 @@ services:
 networks:
   app-network:
     driver: bridge
+  rabbitmq_codeflix:
+    external: true
