--- a/backend/www/.env.dusk.testing.example
+++ b/backend/www/.env.dusk.testing.example
@@ -50,5 +50,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TESTING_PROD=false
+RABBITMQ_SYNC_ENABLED=false
 
 DUSK_DRIVER_URL=http://selenium:4444/wd/hub
+
