--- a/backend/www/composer.json
+++ b/backend/www/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "bschmitt/laravel-amqp": "2.0.10",
+        "chelout/laravel-relationship-events": "^1.4",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
