--- a/backend/www/.env.example
+++ b/backend/www/.env.example
@@ -59,3 +59,7 @@ RABBITMQ_PASSWORD=admin
 RABBITMQ_VHOST=/
 
 RABBITMQ_SYNC_ENABLED=true
+
+JWT_ALGO=RS256
+JWT_PUBLIC_KEY=
+JWT_BLACKLIST_GRACE_PERIOD=30
