--- a/backend/www/composer.json
+++ b/backend/www/composer.json
@@ -18,7 +18,9 @@
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "tucker-eric/eloquentfilter": "^3.0"
+        "tucker-eric/eloquentfilter": "^3.0",
+        "tymon/jwt-auth": "^1.0",
+        "vizir/laravel-keycloak-web-guard": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
