--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +17,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.21.1",
     "immutability-helper": "^3.1.1",
+    "keycloak-js": "^14.0.0",
     "lodash": "^4.17.21",
     "mui-datatables": "^3.7.7",
     "notistack": "^1.0.7",
